--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,12 @@ nav {
     z-index: 1000;
 }
 
+@media (min-width: 769px) {
+    nav {   
+        backdrop-filter: blur(10px); /* Blur effect */
+    }
+}
+
 nav ul {
     list-style: none;
     padding: 0;
@@ -263,4 +269,24 @@ footer {
     header p {
         font-size: 0.9rem;
     }
+}
+/* Scroll to Top Button */
+#scrollToTopBtn {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: none;
+    width: 50px;
+    background-color: #fff7f7;
+    border: none;
+    border-radius: 100%;
+    cursor: pointer;
+    z-index: 1000;
+}
+
+#scrollToTopBtn img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    color: white;
 }
